--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Research Paper</title>
+<title>About</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -100,21 +100,17 @@ ul.task-list li input[type="checkbox"] {
     </a>
     <ul class="dropdown-menu" aria-labelledby="nav-menu-model-development">    
         <li>
-    <a class="dropdown-item" href="./gwsmodelling.qmd" rel="" target="">
+    <a class="dropdown-item" href="./gwsmodelling.html" rel="" target="">
  <span class="dropdown-text">Parametric Testing</span></a>
   </li>  
         <li>
     <a class="dropdown-item" href="./slopesampling.html" rel="" target="">
  <span class="dropdown-text">Slope Sampling</span></a>
   </li>  
-        <li>
-    <a class="dropdown-item" href="./gwsmodelling_new.html" rel="" target="">
- <span class="dropdown-text">Geographically Weighted Model</span></a>
-  </li>  
     </ul>
   </li>
   <li class="nav-item">
-    <a class="nav-link active" href="./research.html" rel="" target="" aria-current="page">
+    <a class="nav-link" href="./research.html" rel="" target="">
  <span class="menu-text">Research Paper</span></a>
   </li>  
 </ul>
@@ -124,7 +120,7 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Home</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./about.html" rel="" target="">
+    <a class="nav-link active" href="./about.html" rel="" target="" aria-current="page">
  <span class="menu-text">About</span></a>
   </li>  
 </ul>
@@ -146,7 +142,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Research Paper</h1>
+<h1 class="title">About</h1>
 </div>
 
 
@@ -161,6 +157,41 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
+<p><img src="images/Spatialilengt.png" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto;;width:50.0%"></p>
+<p>This project is submitted to the <strong>Singapore Management University</strong> in partial fulfillment of the requirements for the degree of <strong>Bachelor of Science (Information Systems) Smart-City Management and Technology major</strong> under IS485 IS Project Experience (SMT Research).</p>
+<section id="co-authors" class="level4" style="color: #603494;">
+<h4 style="color: #603494;" class="anchored" data-anchor-id="co-authors"><strong>Co-Authors</strong></h4>
+</section>
+<p><strong>Khant Min Naing</strong><br>
+mnkhant.2020@scis.smu.edu.sg<br>
+Singapore Management University</p>
+<div class="quarto-figure quarto-figure-left">
+<figure class="figure">
+<p><a href="https://www.linkedin.com/in/khantminnaing/"><img src="images/LinkedIn_logo.png" class="img-fluid figure-img" width="25"></a></p>
+</figure>
+</div>
+<p><strong>Ann Mei Yi Victoria Grace</strong><br>
+victoriaann.2021@scis.smu.edu.sg<br>
+Singapore Management University</p>
+<div class="quarto-figure quarto-figure-left">
+<figure class="figure">
+<p><a href="https://www.linkedin.com/in/victoriagraceann2021/"><img src="images/LinkedIn_logo.png" class="img-fluid figure-img" width="25"></a></p>
+</figure>
+</div>
+<section id="supervisor" class="level4" style="color: #603494;">
+<h4 style="color: #603494;" class="anchored" data-anchor-id="supervisor"><strong>Supervisor</strong></h4>
+</section>
+<p><strong>Associate Professor Kam Tin Seong</strong><br>
+tskam@smu.edu.sg<br>
+Singapore Management University</p>
+<section id="submitted-to" class="level4" style="color: #603494;">
+<h4 style="color: #603494;" class="anchored" data-anchor-id="submitted-to"><strong>Submitted to</strong></h4>
+</section>
+<div class="quarto-figure quarto-figure-left">
+<figure class="figure">
+<p><a href="smu.edu.sg"><img src="images/smu-logo.jpeg" class="img-fluid figure-img" width="252"></a></p>
+</figure>
+</div>
 
 
 
